objects/Order.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <description>Formula: Value of the AccountId field.</description>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FirstSubmitAttemptTs__c</fullName>
        <description>Date of First Submission to Order Management</description>
        <inlineHelpText>Date of First Submission to Order Management</inlineHelpText>
        <label>First Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FirstVersionOrderIdentifier__c</fullName>
        <label>Original Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this order</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentStatus__c</fullName>
        <description>The summary fulfilment status of this order. Populated and updated by order management processes for submitted orders.</description>
        <inlineHelpText>Fulfilment Status</inlineHelpText>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActiveOrderVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the current order is the one that is active in Order Management System.</description>
        <label>Active Order Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsChangesAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changes Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsChangesAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if order requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JeopardyStatus__c</fullName>
        <formula>IF((ISBLANK(vlocity_ins__RequestedCompletionDate__c) || ISNULL(vlocity_ins__RequestedCompletionDate__c)) || (ISBLANK(vlocity_ins__DueDate__c) || ISNULL(vlocity_ins__DueDate__c)), &apos;Green&apos;,
            IF(vlocity_ins__DueDate__c &gt;= vlocity_ins__RequestedCompletionDate__c, &apos;Red&apos;,
            CASE(vlocity_ins__JeopardySafetyIntervalUnit__c,
            &apos;Seconds&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/(24*60*60) &lt;= vlocity_ins__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Calendar Hours&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/24 &lt;= vlocity_ins__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Calendar Days&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c &lt;= vlocity_ins__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            /* TODO: Gap - business intervals doesn&apos;t support business calendar */
            &apos;Business Hours&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c/24 &lt;= vlocity_ins__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Business Days&apos;, IF(vlocity_ins__DueDate__c + vlocity_ins__JeopardySafetyInterval__c &lt;= vlocity_ins__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
            &apos;Green&apos;)
            ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxCatalogueDeltaObjectIndex__c</fullName>
        <description>Maximum Sync Delta Object Index / Name. Populated by order management during order submit in case if catalog is out of sync with OMplus.</description>
        <label>Maximum Catalog Delta Object Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationPlanReferenceId__c</fullName>
        <label>Orchestration Plan Reference Id</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderStatus__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Submit</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancel Requested</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this order was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Orders Using This Price List</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessingLog__c</fullName>
        <description>Order processing log. Populated by order management during order submit.</description>
        <label>Processing Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QueuedTs__c</fullName>
        <description>Timestamp when Order Submission is Queued</description>
        <inlineHelpText>Timestamp when Order Submission is Queued</inlineHelpText>
        <label>Queued Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestedCompletionDate__c</fullName>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestedStartDate__c</fullName>
        <description>Request for OM to Start Order, this is also the Requested Date/Time when CPQ will send the Order to Vlocity OM</description>
        <label>Requested Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubmittedToOmDate__c</fullName>
        <description>Date and Time of Successful Submission to Order Management</description>
        <inlineHelpText>Date of Submission to Order Management</inlineHelpText>
        <label>Submitted to OM Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SupersededOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Superseded Order</description>
        <label>Superseded Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Superseding Order</relationshipLabel>
        <relationshipName>SupersededOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SupplementalAction__c</fullName>
        <description>If this is a supplemental order, this field represents the type of action that is requested on the superseded order.</description>
        <label>Supplemental Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Follow On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ThorJeopardyStatus__c</fullName>
        <label>Jeopardy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidationStatus__c</fullName>
        <description>Status of last validation run</description>
        <inlineHelpText>Status of last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__orchestrationPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_ins__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>